--- a/templates/settings.html
+++ b/templates/settings.html
@@ -102,7 +102,8 @@ main > div{
 }
 
 #logout{
-    margin: auto 0 50px 0;
+    position: fixed;
+    bottom: 50px;
     background-color: #00000000;
     border: none;
     outline: none;
