--- a/templates/filemanager.html
+++ b/templates/filemanager.html
@@ -72,7 +72,7 @@ body{
 
     </nav>
 
-    <input id="adrs-bar" type="text" autocomplete="off" disabled>
+    <input id="adrs-bar" type="text" autocomplete="off">
 
     <div id="itms">
 
